[package]
name = "base"
version.workspace = true
edition.workspace = true

[lib]
name = "base"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ureq = { version = "2.9", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
regex = "1.10"
