[package]
name = "base"
version = "0.1.0"
edition = "2021"

[lib]
name = "base"
crate-type = ["rlib"]

[dependencies]
chrono = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ureq = { version = "2.9", features = ["json", "socks-proxy"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
regex = "1.10"
